k8s/service-catalog.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  labels:
    app: catalog
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: catalog
